--- a/factorio-server.service.in
+++ b/factorio-server.service.in
@@ -4,9 +4,9 @@ Description=Factorio server
 #After=dockerd.service
 
 [Service]
-User=dex
-Group=dex
-WorkingDirectory=/home/dex/factorio-docker/docker
+User=@@USER@@
+Group=@@GROUP@@
+WorkingDirectory=@@SCRIPT_DIR@@/factorio-docker/docker
 ExecStart=/usr/bin/docker-compose up
 ExecStop=/usr/bin/docker-compose down
 TimeoutStartSec=0
